feat: add RoleInitializer and fix upgrade method